[package]
name = "ngx_eyes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.14.0"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.1"
object = "0.25"
plain = "0.2"

[build-dependencies]
libbpf-cargo = "0.9.3"

